[Java 17] Update src/main/java/com/example/java8/memory/PermGenMemoryManager.java from Jira ticket JAVA-22
- Timestamp: 2024-12-04 18:51:41
- Source: Jira code review
- Ticket: JAVA-22
- File: src/main/java/com/example/java8/memory/PermGenMemoryManager.java
- Branch: testing
- Type: Java 17 conversion